update atricle