@@ -1,5 +1,6 @@
 package com.example.jpa.service.article;
 
+import com.example.jpa.domain.article.Article;
 import com.example.jpa.domain.article.ArticleRepository;
 import com.example.jpa.domain.category.Category;
 import com.example.jpa.domain.category.CategoryRepository;
@@ -16,6 +17,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -34,29 +36,37 @@ public class ArticleServiceImpl implements ArticleService {
             throw new NullExceptionClass("description can not be blank or empty", "Article");
         }
 
-
-//        List<Category> categories = new ArrayList<>();
+                List<Category> categories = new ArrayList<>();
         for (CategoryRequest categoryRequest : articleRequest.getCategoryRequests()) {
             if (categoryRequest.getName() == null || categoryRequest.getName().isBlank()) {
                 throw new NullExceptionClass("Category can not be empty or blank", "Article");
             }
             Category category = categoryRepository.findByName(categoryRequest.getName()).orElseThrow(()
+
                     -> new CusNotFoundException("Category not found"));
+            System.out.println("Category:"+category);
+            categories.add(category);
         }
-
-
-
-
-        User user = userRepository.findById(articleRequest.getUserId()).orElseThrow(()
-                -> new CusNotFoundException("User not found"));
-
+        User user = userRepository.findById(articleRequest.getUserId())
+                .orElseThrow(() -> new CusNotFoundException("User not found"));
+        Article article = Article.builder()
+                .title(articleRequest.getTitle())
+                .description(articleRequest.getDescription())
+                .categories(categories)
+                .user(user)
+                .published(articleRequest.getPublished())
+                .build();
+        articleRepository.save(article);
     }
+
 
     @Override
     public Object getAllArticle() {
-        var articleList = articleRepository.findAll();
-        List<ArticleResponse>articleResponseList = articleList.stream().map(articleMapper::mapToResponse)
-                .toList();
+        List<Article> articleList = articleRepository.findAll();
+        List<ArticleResponse> articleResponseList = articleList.stream()
+                .map(articleMapper::mapToResponse)
+                .collect(Collectors.toList());
         return new ArticleMainRes(articleResponseList);
     }
+
 }
